--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="main-page" class="page hidden">
+    <div id="menu" class="page hidden">
       <header>
         <h1 id="title" class="not-select">⬅ Hiragana</h1>
       </header>
@@ -19,7 +19,7 @@
         <li><button>Sentences</button></li>
       </ul>
     </div>
-    <div id="quiz" class="page"> 
+    <div id="quiz" class="page">
       <div id="question">Some Long question</div>
       <div id="answer">Some long answer</div>
       <div id="reveal-buttons" class="buttons"><button id="reveal">Reveal</button></div>
