--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header>
         <h1 id="title" class="not-select">⬅ Hiragana</h1>
       </header>
-      <ul id="main-list">
+      <ul id="menu-list">
         <li><button>Hiragana</button></li>
         <li><button>Katakana</button></li>
         <li><button>Kanji</button></li>
